finalize recipe project

--- a/recipes/chickenTacos.html
+++ b/recipes/chickenTacos.html
@@ -6,6 +6,23 @@
     <title>Chicken Tacos</title>
 </head>
 <body>
+    <a href="../index.html">Back</a>
     <h1>Chicken Tacos</h1>
+    <img src="../img/image_1.jpg" alt="Chicken Tacos Finished">
+    <div class="description">Switch up Taco Tuesday and try these simple and super delicious Slow Cooker Fiesta Chicken Tacos for dinner. Perfectly shredded chicken, black beans, corn, salsa, and chicken taco seasoning is all it takes to get this family favorite dinner on the table.</div>
+    <div class="ingredients">
+    <h1>ingredients</h1>
+    <ul>
+        <li>1 cup chicken broth</li>
+        <li>3 tablespoons taco seasoning mix</li>
+        <li>3 tablespoons taco seasoning mix</li>
+    </ul>
+    <h1>Steps</h1>
+    <ol>
+        <li>Combine chicken broth and taco seasoning mix in a bowl.</li>
+        <li>Place chicken in a slow cooker. Pour chicken broth mixture over chicken.</li>
+        <li>Cook on Low for 6 to 8 hours. Shred chicken.</li>
+    </ol>
+
 </body>
 </html>
