--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <img src="./img/OIP.jpg" alt="Chef">
+    <ul>
+        <li>
+            <a href="./recipes/chickenTacos.html">Chicken Tacos</a>
+        </li>
+        <li>
+            <a href="./recipes/macAndCheese.html">Baked Mac ‘n' Cheese with Chicken Meatballs</a>
+        </li>
+    </ul>
+
 </body>
 </html>
