--- a/recipes/macAndCheese.html
+++ b/recipes/macAndCheese.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baked Mac ‘n' Cheese with Chicken Meatballs</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <a href="../index.html">Back</a>
